--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/Star.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="We increase revenue and ensure sustainable long-term growth for your business through powerful Webflow websites."
+    />
+
     <title>Kronix</title>
   </head>
   <body>
